<resources>
    <string name="app_name">CakeClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Home</string>
    <string name="txt_search">Search</string>
    <string name="txt_voice">Voice</string>
    <string name="txt_history">History</string>
    <string name="txt_person">Profile</string>
</resources>
