<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_home" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/txt_search" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_mic"
        android:title="@string/txt_voice" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/txt_history" />

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/txt_person" />
</menu>